Add Next.js frontend skeleton
- Dashboard with map, sidebar, query panel, agent logs
- Mapbox GL integration for route visualization
- API client matching backend endpoints
- Move backend Dockerfile to backend/ for consistency

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,10 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
+# Next.js
+frontend/.next/
+frontend/out/
+
 # Build outputs
 frontend/build/
 frontend/dist/
