--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,9 @@ BBOX_WEST=-83.5
 BBOX_SOUTH=35.0
 BBOX_EAST=-81.5
 BBOX_NORTH=36.5
+
+# Frontend (Next.js)
+# Mapbox access token for map display - get one at https://mapbox.com
+NEXT_PUBLIC_MAPBOX_TOKEN=your_mapbox_token_here
+# Backend API URL (for frontend to connect to)
+NEXT_PUBLIC_API_URL=http://localhost:8000
