--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "mapbox-gl": "^3.1.2",
-    "@types/mapbox-gl": "^3.1.0",
+    "maplibre-gl": "^4.1.0",
     "lucide-react": "^0.323.0",
     "date-fns": "^3.3.1",
     "clsx": "^2.1.0"
