--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,39 @@
 # Core
-python-dotenv==1.0.0
-httpx==0.27.0
+python-dotenv>=1.0.0
+httpx>=0.27.0
 
 # Geospatial
-geopandas==0.14.3
-shapely==2.0.3
-osmnx==1.9.1
-networkx==3.2.1
-folium==0.15.1
-rasterio==1.3.9
-pyproj==3.6.1
+geopandas>=0.14.3
+shapely>=2.0.3
+osmnx>=1.9.1
+networkx>=3.2.1
+folium>=0.15.1
+rasterio>=1.3.9
+pyproj>=3.6.1
 
 # Database
-sqlalchemy==2.0.27
-geoalchemy2==0.14.3
+sqlalchemy>=2.0.27
+geoalchemy2>=0.14.3
 
 # API
-fastapi==0.109.2
-uvicorn==0.27.1
-pydantic==2.6.1
+fastapi>=0.109.2
+uvicorn>=0.27.1
+pydantic>=2.6.1
 
 # LLM
-anthropic==0.18.1
+anthropic>=0.18.1
 
 # Data processing
-pandas==2.2.0
-numpy==1.26.4
-requests==2.31.0
+pandas>=2.2.0
+numpy>=1.26.4
+requests>=2.31.0
 
 # Satellite data
-sentinelsat==1.2.1
+sentinelsat>=1.2.1
 
 # Visualization
-matplotlib==3.8.3
+matplotlib>=3.8.3
 
 # Dev
-pytest==8.0.0
-pytest-asyncio==0.23.5
+pytest>=8.0.0
+pytest-asyncio>=0.23.5
