Replace OSRM with OpenRouteService, add hazard polygon avoidance, and fix origin parsing
- Add ORS client (ors_client.py) using Directions v2 POST with avoid_polygons
- Add hazard polygon utility (hazard_polygons.py) to collect event polygons into
  GeoJSON MultiPolygon for ORS avoidance routing
- Add affected_polygon geometry to all routing-relevant events in helene_timeline.json
- Update router to use ORS instead of OSRM, passing hazard polygons
- Fix origin parsing: Claude now geocodes any user-mentioned location using its
  geographic knowledge instead of matching against a predefined list
- Improve shelter selection scoring by need-match, proximity, and occupancy
- Pass ORS_API_KEY to Docker and mount backend source for live reload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,11 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./backend/data/events:/app/backend/data/events:ro
-      - ./backend/data/shelters:/app/backend/data/shelters:ro
-      - ./backend/data/osm:/app/backend/data/osm
-      - ./backend/data/satellite:/app/backend/data/satellite
+      - ./backend:/app/backend
+      - ./.env:/app/.env:ro
     environment:
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - ORS_API_KEY=${ORS_API_KEY}
       - DATABASE_URL=sqlite:///backend/data/disaster_relief.db
     command: >
       sh -c "python scripts/init_database.py &&
